GetTime v1.0 | Discord Bot v1.0

Added:
  * Added a "!gt v" command to the Discord Bot, that simply states the current version of the bot
  * Added a Google Form where users can request their school to be added to GetTime.
  * Added min.sh (Same as min.bat, but in shell form)
  * Added Tullinge Gymnasium and Sjödalsgymnasiet
  * Added/brought back fullscreen mode

Changed:
  * Removed the "logger" class from main.py and reverted back to using logging like normal people
  * Redesigned the way the dropdown button text changes when the screen becomes to small
  * Removed the drop shadow from the schedule
  * Restructured some code for the URI manipulation
  * Moved cache settings to settings.json
  * Moved menus to menus.json

Fixed:
  * Fixed a bug where the Discord Bot would respond to any prefix that started with its own
  * Fixed a bug where the Discord Bot "!gt reg help" command would display the schools sorted by their ID, not their name
  * Fixed many bugs related to the "_school" variable in the GetTime class being set incorrectly, or not changed at all
  * Fixed so that you cant select any text on the schedule
  * Fixed a bug where if you clicked on a lesson while having the drop down meny opened, it would first ask for a URL and then close, instead of just closing.
  * Fixed the transition effect on the schedule (Fading blur) so that it wont glitch out when an error message appears
  * Fixed a bug where the ID text would not fix itself after the screen resizes

Sidenotes:
The first major 1.0 release of GetTime is here!